2010-10-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Clear out 0x80 color bit on EFI.
	Tested by: decoder
	Reported by: decoder and meta tech.

	* grub-core/term/efi/console.c (grub_console_standard_color): Removed.
	(grub_console_setcolorstate): Clear out 0x80 bit.
	Use GRUB_TERM_DEFAULT_STANDARD_COLOR.
	(grub_console_output): Use GRUB_TERM_DEFAULT_NORMAL_COLOR.
	Use GRUB_TERM_DEFAULT_HIGHLIGHT_COLOR.

2010-10-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (DEFAULT_VIDEO_MODE) [GRUB_MACHINE_EFI]:
	Set to "auto".

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c (grub_gettext_init_ext): Avoid using
	mo_file after freeing.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (read_terminal_list): Free in a right order.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_execute_sourcecode): Set
	flags.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (main) [GRUB_MACHINE_IEEE1275]: Propagate argp
	usage.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Put terminfo into core on ieee1275 and yeeloong (needed for console).

	* gentpl.py: New groups terminfoinkernel and terminfomodule.
	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Include extcmd.h, arg.h
	and terminfo.h when needed.
	* grub-core/Makefile.core.def (kernel): Include term/terminfo.c,
	term/tparm.c, commands/extcmd.c, lib/arg.c on terminfokernel.
	(terminfo): Enable only on terminfokernel.
	(extcmd): Likewise.
	* include/grub/extcmd.h: Add missing EXPORT_FUNC.
	* include/grub/lib/arg.h: Likewise.
	* grub-core/term/ieee1275/ofconsole.c (grub_ofconsole_dimensions): Fix
	incorrect usage of ->.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_mbi2.c (grub_multiboot_make_mbi]
	[GRUB_MACHINE_EFI && __i386__]: Fix typo.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix coreboot compilation.